Fixing card spacing

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -28,9 +28,9 @@
   background: $highlight-white url('../../static/img/MountainRange.svg') no-repeat bottom;
   background-size: contain;
 
-  margin: 1rem 0;
+  margin: 2rem 0;
   padding: 2rem;
-  padding-bottom: 5rem;
+  padding-bottom: 6rem;
 
   max-width: 35rem;
 
